--- a/_config.yml
+++ b/_config.yml
@@ -81,5 +81,5 @@ social_icons:
   - RSS
 
 _comments:
-  description: Coding sprint: supervised neural time series
-  blurb: Coding sprint: supervised neural time series
+  description: Coding sprint supervised neural time series
+  blurb: Coding sprint supervised neural time series
