ENH: add prepariring instructions

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,5 +4,7 @@
   link: "#who"
 - name: Where and when?
   link: "#where-when"
+- name: Get Ready!
+  link: "#get-ready"
 - name: Contact
   link: "#contact"
